--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-10 align-self-end">
-                        <h1 class="text-uppercase text-white font-weight-bold">FRONT-END SOFTWARE ENGINEER</h1>
+                        <h1 class="text-uppercase text-white font-weight-bold">Jameslee Gambardella</h1>
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+                        <p class="text-white-75 font-weight-light mb-5">FULL STACK WEB DEVELOPER</p>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">CHECK ME OUT</a>
                     </div>
                 </div>
             </div>
@@ -64,39 +64,87 @@
         </section>
         <!-- Services-->
         <section class="page-section" id="services">
-            <div class="container">
-                <h2 class="text-center mt-0">At Your Service</h2>
-                <hr class="divider my-4" />
-                <div class="row">
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Sturdy Themes</h3>
-                            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
-                        </div>
+          <div class="section">
+            <div class="row">
+              <div class="col s12 center">
+                <h4>Skills</h4>
+                <div class="container">
+                  <hr class="divider my-4">
+                    <div class="row justify-content-center">
+                      <div class="col s6 m3 text-center">
+                        <img src="https://icongr.am/devicon/javascript-original.svg?size=100" alt="JavaScript">
+                        <p>JavaScript</p>
+                      </div>
+                      <div class="col s6 m3 text-center">
+                        <img src="https://icongr.am/devicon/css3-original-wordmark.svg?size=100" alt="CSS3">
+                        <p>CSS</p>
+                      </div>
+                      <div class="col s6 m3 text-center">
+                        <img src="https://icongr.am/devicon/html5-original-wordmark.svg?size=100" alt="HTML5">
+                        <p>HTML</p>
+                      </div>
+                      <div class="col s6 m3 text-center">
+                        <img src="https://icongr.am/devicon/python-original.svg?size=100&color=currentColor" alt="Python">
+                        <p>Python</p>
+                      </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Up to Date</h3>
-                            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
-                        </div>
+                    <div class="row justify-content-center">
+                      <div class="col s6 m3 text-center">
+                        <img src="https://icongr.am/devicon/react-original-wordmark.svg?size=100" alt="React">
+                        <p>React</p>
+                      </div>
+                      <div class="col s6 m3 text-center">
+                        <img src="https://icongr.am/devicon/nodejs-original.svg?size=100" alt="nodejs">
+                        <p>Node</p>
+                      </div>
+                      <div class="col s6 m3 text-center">
+                        <img src="https://icongr.am/devicon/jquery-original-wordmark.svg?size=100" alt="jQuery">
+                        <p>jQuery</p>
+                      </div>
+                      <div class="col s6 m3 text-center">
+                        <img src="https://icongr.am/devicon/sass-original.svg?size=100" alt="Sass">
+                        <p>Sass</p>
+                      </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Ready to Publish</h3>
-                            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
-                        </div>
+                    <div class="row justify-content-center">
+                      <div class="col s6 m3 text-center">
+                        <img src="https://icongr.am/devicon/bootstrap-plain-wordmark.svg?size=100&color=563d7c" alt="Bootstrap">
+                        <p>Bootstrap</p>
+                      </div>
+                      <div class="col s6 m3 text-center">
+                        <img src="https://icongr.am/devicon/express-original.svg?size=100" alt="Express">
+                        <p>Express</p>
+                      </div>
+                      <div class="col s6 m3 text-center">
+                        <img src="https://icongr.am/devicon/django-original.svg?size=100&color=currentColor" alt="Django">
+                        <p>Django</p>
+                      </div>
+                      <div class="col s6 m3 text-center">
+                        <img src="https://icongr.am/devicon/mongodb-original-wordmark.svg?size=100" alt="mongodb">
+                        <p>mongoDB</p>
+                      </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Made with Love</h3>
-                            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
-                        </div>
+                    <div class="row justify-content-center">
+                      <div class="col s6 m3 text-center">
+                        <img src="https://icongr.am/devicon/atom-original-wordmark.svg?size=100" alt="Atom">
+                        <p>Atom</p>
+                      </div>
+                      <div class="col s6 m3 text-center">
+                        <img src="https://icongr.am/devicon/git-original-wordmark.svg?size=100" alt="Git">
+                        <p>Git</p>
+                      </div>
+                      <div class="col s6 m3 text-center">
+                        <img src="https://icongr.am/devicon/github-original-wordmark.svg?size=100" alt="GitHub">
+                        <p>GitHub</p>
+                      </div>
+                      <div class="col s6 m3 text-center">
+                        <img src="https://icongr.am/devicon/heroku-original.svg?size=100" alt="Heroku">
+                        <p>Heroku</p>
+                      </div>
                     </div>
+                  </div>
                 </div>
+              </div>
             </div>
         </section>
         <!-- Portfolio-->
