--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="section">
             <div class="row">
               <div class="col s12 center">
-                <h4>Skills</h4>
+                <h4 class='skills_txt'>Skills</h4>
                 <div class="container">
                   <hr class="divider my-4">
                     <div class="row justify-content-center">
