--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">We've got what you need!</h2>
+                        <h2 class="text-white mt-0">Excited and Focused</h2>
                         <hr class="divider light my-4" />
                         <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
@@ -67,7 +67,9 @@
           <div class="section">
             <div class="row">
               <div class="col s12 center">
-                <h4 class='skills_txt'>Skills</h4>
+                 <div class='skills_txt'>
+                   <h4 class='skills_txt'>Skills</h4>
+                 </div>
                 <div class="container">
                   <hr class="divider my-4">
                     <div class="row justify-content-center">
@@ -211,7 +213,7 @@
         <!-- Call to action-->
         <section class="page-section bg-dark text-white">
             <div class="container text-center">
-                <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
+                <h2 class="mb-4">Resume</h2>
                 <a class="btn btn-light btn-xl" href="https://startbootstrap.com/theme/creative/">Download Now!</a>
             </div>
         </section>
@@ -228,20 +230,20 @@
                 <div class="row">
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                         <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>+1 (555) 123-4567</div>
+                        <div>+1 (347) 554-0237</div>
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
-                        <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                        <a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
+
+                        <a class="d-block" href="mailto:JamesleeGambardella@gmail.com">JamesleeGambardella@gmail.com</a>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Footer-->
-        <footer class="bg-light py-5">
+        <!-- <footer class="bg-light py-5">
             <div class="container"><div class="small text-center text-muted">Copyright © 2020 - Start Bootstrap</div></div>
-        </footer>
+        </footer> -->
         <!-- Bootstrap core JS-->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
