--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <section class="page-section bg-dark text-white">
             <div class="container text-center">
                 <h2 class="mb-4">Resume</h2>
-                <a class="btn btn-light btn-xl" href="https://startbootstrap.com/theme/creative/">Download Now!</a>
+                <a class="btn btn-light btn-xl" href="/Users/jlg/sei/training/portfolio/assets/Jameslee Resume (1) copy.pdf">Download Now!</a>
             </div>
         </section>
         <!-- Contact-->
