added icons for github and linked

--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
                         <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
                     </div>
+                    <div class="col s6 m3 text-center">
+                      <img src="https://icongr.am/entypo/linkedin.svg?size=75&color=ffffff" alt="LinkedIn">
+                      <p>LinkedIn</p>
+                    </div>
+                    <div class="col s6 m3 text-center">
+                      <img src="https://icongr.am/entypo/github.svg?size=75&color=ffffff" alt="GitHub">
+                      <p>GitHub</p>
+                  </div>
                 </div>
             </div>
         </section>
