--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Excited and Focused</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">ABOUT ME GOES HERE</p>                      
+                        <p class="text-white-50 mb-4">ABOUT ME GOES HERE</p>
                     </div>
                     <div class="col s6 m3 text-center">
                       <img src="https://icongr.am/entypo/linkedin.svg?size=75&color=ffffff" alt="LinkedIn">
@@ -221,7 +221,7 @@
         <section class="page-section bg-dark text-white">
             <div class="container text-center">
                 <h2 class="mb-4">Resume</h2>
-                <a class="btn btn-light btn-xl" href="/Users/jlg/sei/training/portfolio/assets/Jameslee Resume (1) copy.pdf">Download Now!</a>
+                <a class="btn btn-light btn-xl" href="https://drive.google.com/file/d/1edNr_qpKgTz8OvHgWfyWh9qZ1kAYxILS/view?usp=sharing">Download Now!</a>
             </div>
         </section>
         <!-- Contact-->
