--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Excited and Focused</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">ABOUT ME GOES HERE</p>
+                        <p class="text-white-50 mb-4">Born and bred in New York City, its a wierd feeling, to be apart of a community so diverse and so dynamic its almost spoils me to the point that I dont have to worry about being misunderstood and misjudged,
+                        I come from a pretty unusul background. I was homeless from 17-19, I was jaded and became a nusecense, until I met my girlfriend who became the best influecene that anyone can ask for. Tonya my girlfriend showed me my potential and the caliber of work that I was capable of and I want to dedicate this summary to her.</a>  </p>
                     </div>
                     <div class="col s6 m3 text-center">
                       <img src="https://icongr.am/entypo/linkedin.svg?size=75&color=ffffff" alt="LinkedIn">
