--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@
         <!-- Call to action-->
         <section class="page-section bg-dark text-white">
             <div class="container text-center">
-                <h2 class="mb-4">Resume</h2>
-                <a class="btn btn-light btn-xl" href="https://drive.google.com/file/d/1edNr_qpKgTz8OvHgWfyWh9qZ1kAYxILS/view?usp=sharing">Download Now!</a>
+                <a class="btn btn-light btn-xl" href="https://drive.google.com/file/d/1edNr_qpKgTz8OvHgWfyWh9qZ1kAYxILS/view?usp=sharing">Resume</a>
             </div>
         </section>
         <!-- Contact-->
