testing snapshot thumbnail

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="https://jamesleeg.github.io/browser-JLGTTT-main/">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.png" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
                                 <div class="project-name">Project Name</div>
