testing snapshot thumbnail

--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
                 <div class="row no-gutters">
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="https://ga-sixfigs.github.io/snapshot-client/">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/sn.png" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-category text-white-50">Project</div>
                                 <div class="project-name">SnapShot</div>
                             </div>
                         </a>
@@ -172,7 +172,7 @@
                         <a class="portfolio-box" href="https://jamesleeg.github.io/browser-JLGTTT-main/">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.png" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-category text-white-50">Project</div>
                                 <div class="project-name">Project Name</div>
                             </div>
                         </a>
