--- a/index.html
+++ b/index.html
@@ -170,16 +170,16 @@
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="https://jamesleeg.github.io/browser-JLGTTT-main/">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/TTT.png" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Project</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-name">Tic-Tac-Toe</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/TB.png" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
                                 <div class="project-name">Project Name</div>
