struggling with populating my project links

--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
                                 <div class="project-category text-white-50">Category</div>
                                 <div class="project-name">Project Name</div>
                             </div>
+                            <div class="container text-center">
+                                <a class="btn btn-light btn-xl" href="https://jamesleeg.github.io/browser-JLGTTT-main/">JLTTT</a>
+                            </div>
                         </a>
                     </div>
 
