--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                         <p class="text-white-50 mb-4">About me goes here
                     <div class="col s6 m3 text-center">
                       <img src="https://icongr.am/entypo/linkedin.svg?size=75&color=ffffff" alt="LinkedIn">
-                      <a class="linkendin" href="https://www.linkedin.com/in/jameslee-gambardella-697738207/"></a>
+                      <a class="btn btn-light btn-xl" href="https://www.linkedin.com/in/jameslee-gambardella-697738207/">LinkedIn</a>
+                      <p>LinkedIn</p>
                     </div>
                     <div class="col s6 m3 text-center">
                       <img src="https://icongr.am/entypo/github.svg?size=75&color=ffffff" alt="GitHub">
