--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                     <div class="col s6 m3 text-center">
                       <img src="https://icongr.am/entypo/linkedin.svg?size=75&color=ffffff" alt="LinkedIn">
                       <a class="btn btn-light btn-xl" href="https://www.linkedin.com/in/jameslee-gambardella-697738207/">LinkedIn</a>
-                      <p>LinkedIn</p>
+
                     </div>
                     <div class="col s6 m3 text-center">
                       <img src="https://icongr.am/entypo/github.svg?size=75&color=ffffff" alt="GitHub">
-                      <p>GitHub</p>
+                          <a class="btn btn-light btn-xl" href="https://github.com/Jamesleeg">GitHub</a>        
                   </div>
                 </div>
             </div>
