buttons on linked ans github

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                     <div class="col s6 m3 text-center">
                       <img src="https://icongr.am/entypo/github.svg?size=75&color=ffffff" alt="GitHub">
-                          <a class="btn btn-light btn-xl" href="https://github.com/Jamesleeg">GitHub  </a>        
+                          <a class="btn btn-light btn-xl" href="https://github.com/Jamesleeg">GitHub !</a>        
                   </div>
                 </div>
             </div>
