--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                     <div class="col s6 m3 text-center">
                       <img src="https://icongr.am/entypo/github.svg?size=75&color=ffffff" alt="GitHub">
-                          <a class="btn btn-light btn-xl" href="https://github.com/Jamesleeg">GitHub !</a>        
+                          <a class="btn btn-light btn-xl" href="https://github.com/Jamesleeg">GitHub !</a>
                   </div>
                 </div>
             </div>
@@ -182,8 +182,9 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/TBB.png" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Project</div>
+                                <div class="project-name">TOPBETTER</div>
+                                <a class="btn btn-light btn-xl" href="https://jamesleeg.github.io/TOPBETTER-client/">Visit</a>
                             </div>
 
                         </a>
