--- a/index.html
+++ b/index.html
@@ -179,14 +179,14 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg">
+                        <a class="portfolio-box" target="blank" href="assets/img/portfolio/fullsize/3.jpg"></a>
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/TBB.png" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Project</div>
                                 <div class="project-name">TOPBETTER</div>
                             </div>
 
-                        </a>
+                        
                         <a class="btn btn-light btn-xl" href="https://jamesleeg.github.io/TOPBETTER-client/">Visit</a>
                     </div>
 
