trying out new way to link project

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
             </div>
         </section>
         <!-- Portfolio-->
+      <section>
         <div id="portfolio">
             <div class="container-fluid p-0">
                 <div class="row no-gutters">
@@ -186,13 +187,14 @@
                                 <div class="project-name">TOPBETTER</div>
                             </div>
 
-                        
+
                         <a class="btn btn-light btn-xl" href="https://jamesleeg.github.io/TOPBETTER-client/">Visit</a>
                     </div>
 
                 </div>
             </div>
         </div>
+      </section>  
         <!-- Call to action-->
         <section class="page-section bg-dark text-white">
             <div class="container text-center">
