trying out new way to link project

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 </div>
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><img class="img-fluid" src="/Users/jlg/Sei/training/portfolio/assets/img/portfolio/thumbnails/TBB.png" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="portfolio/assets/img/portfolio/thumbnails/TBB.png" alt="..." /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -183,7 +183,7 @@
                                     <p class="mb-0 text-white-50">This is a full-stack project. Where I had to
                                       build a back-end using mongoDb, mongoose and express and also
                                       built a front-end using JavaScript, HTML5, CSS, Bootstrap, Ajax, and jQuery. </p>
-                                      <a target="blank" class="btn btn-primary js-scroll-trigger" href="https://jamesleeg.github.io/TOPBETTER-client/">PawSome Dogs</a>
+                                      <a target="blank" class="btn btn-primary js-scroll-trigger" href="https://jamesleeg.github.io/TOPBETTER-client/">TOPBETTER</a>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
                             </div>
@@ -192,7 +192,7 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><img class="img-fluid" src="/Users/jlg/Sei/training/portfolio/assets/img/portfolio/thumbnails/JLTTT.png" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="portfolio/assets/img/portfolio/thumbnails/JLTTT.png" alt="..." /></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
