--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 </div>
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><img class="img-fluid" src="portfolio/assets/img/portfolio/thumbnails/TBB.png" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="https://drive.google.com/file/d/1YhABzMqvZUXRtwV_XTj1owHGRXFFOdkn/view?usp=sharing" alt="..." /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
