--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <!-- Call to action-->
         <section class="page-section bg-dark text-white">
             <div class="container text-center">
-                <a class="btn btn-light btn-xl" href="https://drive.google.com/file/d/1edNr_qpKgTz8OvHgWfyWh9qZ1kAYxILS/view?usp=sharing">Resume</a>
+                <a class="btn btn-light btn-xl" href="https://cdn3.vectorstock.com/i/1000x1000/19/52/tic-tac-toe-game-linear-outline-icon-neon-style-vector-28341952.jpg">Resume</a>
             </div>
         </section>
         <!-- Contact-->
