--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">TOPBETTER</h4>
-                                    <p class="mb-0 text-white-50">This is a full-stack project. Where I had to
+                                    <h4 class="text-black">TOPBETTER</h4>
+                                    <p class="mb-0 text-black-50">This is a full-stack project. Where I had to
                                       build a back-end using mongoDb, mongoose and express and also
                                       built a front-end using JavaScript, HTML5, CSS, Bootstrap, Ajax, and jQuery. </p>
                                       <a target="blank" class="btn btn-primary js-scroll-trigger" href="https://jamesleeg.github.io/TOPBETTER-client/">TOPBETTER</a>
@@ -197,8 +197,8 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Tic-Tac-Toe</h4>
-                                    <p class="mb-0 text-white-50">A front-end web built to play the classic game Tic-Tac-Toe. I used
+                                    <h4 class="text-black">Tic-Tac-Toe</h4>
+                                    <p class="mb-0 text-black-50">A front-end web built to play the classic game Tic-Tac-Toe. I used
                                       JavaScript, HTML5, CSS, Bootstrap, Ajax, and jQuery to build this webpage. </p>
                                     <a target="blank" class="btn btn-primary js-scroll-trigger" href="https://jamesleeg.github.io/browser-JLGTTT-main/">Tic-Tac-Toe</a>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
