--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="https://www.clipartmax.com/png/small/1-18911_vintage-camera-clip-art-camera-black-and-white-polaroid.png" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>SnapShot</h4>
-                            <p class="text-black-50 mb-0">A collaborative full-stack site,with a
+                            <h4 class="text-white">SnapShot</h4>
+                            <p class="text-white-50 mb-0">A collaborative full-stack site,with a
                             group of 4. We completed this site with instagram in mind using React and Express within a time span of 4 days!</p>
                             <a target="blank" class="btn btn-primary js-scroll-trigger" href="https://ga-sixfigs.github.io/snapshot-client/#/">SnapShot</a>
                         </div>
@@ -181,8 +181,8 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-black">TOPBETTER</h4>
-                                    <p class="mb-0 text-black-50">This is a full-stack project. Where I had to
+                                    <h4 class="text-white">TOPBETTER</h4>
+                                    <p class="mb-0 text-white-50">This is a full-stack project. Where I had to
                                       build a back-end using mongoDb, mongoose and express and also
                                       built a front-end using JavaScript, HTML5, CSS, Bootstrap, Ajax, and jQuery. </p>
                                       <a target="blank" class="btn btn-primary js-scroll-trigger" href="https://jamesleeg.github.io/TOPBETTER-client/">TOPBETTER</a>
@@ -200,8 +200,8 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-black">Tic-Tac-Toe</h4>
-                                    <p class="mb-0 text-black-50">A front-end web built to play the classic game Tic-Tac-Toe. I used
+                                    <h4 class="text-white">Tic-Tac-Toe</h4>
+                                    <p class="mb-0 text-white-50">A front-end web built to play the classic game Tic-Tac-Toe. I used
                                       JavaScript, HTML5, CSS, Bootstrap, Ajax, and jQuery to build this webpage. </p>
                                     <a target="blank" class="btn btn-primary js-scroll-trigger" href="https://jamesleeg.github.io/browser-JLGTTT-main/">Tic-Tac-Toe</a>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
