--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Excited and Focused</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4"> Growing up in New York City has helped me develop into a creative, daring, and diverse individual. Career switching into software engineering give me the opportunity to put that all to use.
+                        <p class="text-white-50 mb-4"> Growing up in New York City has helped me develop into a creative, daring, and diverse individual. Career switching into software engineering gives me the opportunity to put those qualities to use.
                         </p>
                     <div class="col s6 m3 text-center">
                       <img src="https://icongr.am/entypo/linkedin.svg?size=75&color=ffffff" alt="LinkedIn">
