added dd to port

--- a/index.html
+++ b/index.html
@@ -177,16 +177,16 @@
                 <br>
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><img class="img-fluid" src="https://miro.medium.com/max/2400/0*X-QprUmCHQzN1few.jpg" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="https://drive.google.com/file/d/1bB2vtQ0Gs9adMi_rRJeNy8xwWO0cm9u5/view?usp=sharing*X-QprUmCHQzN1few.jpg" alt="..." /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">TOPBETTER</h4>
+                                    <h4 class="text-white">DeliveryDeets</h4>
                                     <p class="mb-0 text-white-50">This is a full-stack project. Where I had to
                                       build a back-end using mongoDb, mongoose and express and also
-                                      built a front-end using JavaScript, HTML5, CSS, Bootstrap, Ajax, and jQuery. </p>
-                                      <a target="blank" class="btn btn-primary js-scroll-trigger" href="https://jamesleeg.github.io/TOPBETTER-client/">TOPBETTER</a>
+                                      built a front-end using JavaScript, React, CSS, and Bootstrap. </p>
+                                      <a target="blank" class="btn btn-primary js-scroll-trigger" href="https://jamesleeg.github.io/Delivery-Deets-client/">DeliveryDeets</a>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
                             </div>
