added dd to port

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <br>
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><img class="img-fluid" src="https://drive.google.com/file/d/1bB2vtQ0Gs9adMi_rRJeNy8xwWO0cm9u5/view?usp=sharing*X-QprUmCHQzN1few.jpg" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="https://imgur.com/RLjJozR" alt="..." /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
