--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <br>
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><img class="img-fluid" src="https://imgur.com/RLjJozR" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="https://i.imgur.com/RLjJozR.png" title="source: imgur.com" /></a>" alt="..." /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
